<resources>
    <string name="app_name">Calcify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_general">General</string>
    <string name="menu_gpa_calculator">GPA Calculator</string>
    <string name="menu_integral_differential">Integral &amp; Diferential Calculator</string>
    <string name="menu_unit_conversion">Unit Conversion</string>
    <string name="menu_vat_gst">VAT &amp; GST Calculator</string>
    <string name="calculate_gst">Calculate GST</string>
    <string name="calculate_vat">Calculate VAT</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="result">Result: </string>
    <string name="remove_vat">Remove Vat</string>
    <string name="add_vat">Add Vat</string>
    <string name="contact">Contact Us</string>
    <string name="about">About/Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">Version : 1.0</string>
    <string name="author">Author : Pavitra Walia</string>
    <string name="about_">About :</string>
    <string name="about1">An App to perform Scientific Calculations and allow easy handling of calculations for everyday life.</string>
    <string name="aim">Aim</string>
    <string name="aim0">This app thrives to provide easy acccess to calculations in all domains listed below:</string>
    <string name="aim1">1. General (Fundamental Arithmetic,Exponential, Logarithmic , Trignometric)</string>
    <string name="aim2">2. Unit conversion (Length, Width, Temperature, Pressure, Time, Currency)</string>
    <string name="aim3">3. GPA calculations</string>
    <string name="aim4">4. Integral Differential Calculator</string>
    <string name="aim5">5. VAT GST calculations</string>
</resources>
