<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_general" />
        <item
            android:id="@+id/nav_gpa_calculator"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/menu_gpa_calculator" />
        <item
            android:id="@+id/nav_unit_conversion"
            android:icon="@drawable/ic_border_style_black_24dp"
            android:title="@string/menu_unit_conversion" />
        <item
            android:id="@+id/nav_integral_differential"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/menu_integral_differential" />
        <item
            android:id="@+id/nav_vat_gst"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu_vat_gst" />
    </group>



</menu>
