<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vat_gst_calculator.VatCalulator"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="142dp"
                android:layout_height="29dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="26dp"
                android:text="@string/enter_amount" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="154dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="26dp"
                android:layout_marginLeft="26dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="139dp"
                android:layout_height="31dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="26dp"
                android:text="@string/enter_rate" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="177dp"
                android:layout_height="57dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="26dp"
                android:ems="10"
                android:inputType="number" />




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="26dp"
                    android:text="Add VAT" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="85dp"
                    android:layout_marginTop="26dp"
                    android:text="Remove VAT" />
            </LinearLayout>


            <TextView
                android:id="@+id/gstResult"
                android:layout_width="187dp"
                android:layout_height="61dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="145dp"
                android:text="@string/result" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
